--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 DATABASE_URL=mysql://root:@host/festival
+MYSQL_HOST = 'localhost'
+MYSQL_USER = 'root'
+MYSQL_PASSWORD = ''
+MYSQL_DB = 'festival'
+HEX_SEC_KEY = 'secret'
