--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DATABASE_URL=mysql://root:@host/festival
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:@host/festival
+
 MYSQL_HOST = 'localhost'
 MYSQL_USER = 'root'
 MYSQL_PASSWORD = ''
