--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DATABASE_URL=mysql://root:@host/festival
-SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:@host/festival
+DATABASE_URL=postgresql://festival_whtt_user:HghpwIHwamviE0xtak6vejdrehzI4wGe@dpg-cpiqqp21hbls73blh9f0-a.oregon-postgres.render.com/festival_whtt
+SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://festival_whtt_user:HghpwIHwamviE0xtak6vejdrehzI4wGe@dpg-cpiqqp21hbls73blh9f0-a.oregon-postgres.render.com/festival_whtt
 
-MYSQL_HOST = 'localhost'
-MYSQL_USER = 'root'
-MYSQL_PASSWORD = ''
-MYSQL_DB = 'festival'
+PG_HOST = 'dpg-cpiqqp21hbls73blh9f0-a.oregon-postgres.render.com'  # Host de PostgreSQL
+PG_USER = 'festival_whtt_user'   # Nombre de usuario de PostgreSQL
+PG_PASSWORD = 'HghpwIHwamviE0xtak6vejdrehzI4wGe'  # Contraseña de PostgreSQL
+PG_DB = 'festival_whtt'      # Nombre de la base de datos PostgreSQL
 HEX_SEC_KEY = 'secret'
